# pacote-paulo-claude

./: .gitignore  CLAUDE.md  README.md
Apometria/: 01 - O que e Apometria.md  02 - Origem e historia.md  03 - Etimologia e desdobramento.md  04 - Como funciona uma sessao.md  05 - Para que serve.md  06 - Conceitos-chave.md  07 - Relacao com o Espiritismo.md  08 - Status cientifico e ceticismo.md  09 - Etica e cuidados.md  Apometria.md  README.md
davinci-resolve-mcp/: .gitignore  .mcp.json.exemplo  CORTES.md  INSTALAR.bat  INSTRUCOES_PAULO.md  LICENSE  QUICKSTART.md  README.md  WINDOWS_SETUP.md  _comprimir_log.txt  instalar.sh  pyproject.toml
davinci-resolve-mcp/scripts_resolve/: 00_diagnostico.py  10_cortar_silencio.py  20_cortar_ne.py  30_legenda_reels.py  40_reframe_vertical.py  50_cortar_silencio_externo.py  60_audio.py  70_cor.py  80_comprimir.py  instalar_scripts.bat  transcrever_palavras.py
davinci-resolve-mcp/src/resolve_claude_mcp/: server.py  transcription.py
davinci-resolve-mcp/vocabulario/: correcoes.txt  nomes.txt
ecossistema-claude/: CLAUDE_MD_MODELO.md  COMO_FUNCIONA.md
kit-edicao-video/: COMO_USAR.md
skill-brevidade-inteligente/: COMO_USAR.md  SKILL.md
skill-criar-skill/: COMO_USAR.md  SKILL.md
skill-encerrar-sessao/: COMO_USAR.md  SKILL.md
skill-fable-mode/: COMO_USAR.md  SKILL.md  agente-fable-mode.md
skill-find-skills/: COMO_USAR.md  SKILL.md
skill-humanizer/: COMO_USAR.md
skill-iniciar-sessao/: COMO_USAR.md  SKILL.md
skill-pesquisa-profunda/: COMO_USAR.md  SKILL.md
skill-responsivar-mobile/: COMO_USAR.md  SKILL.md
(+16 files in other folders)
