[project]
name = "resolve-claude-mcp"
version = "0.1.0"
description = "DaVinci Resolve Studio integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.3.0",
    # Screenshot tool — targets the Resolve window per platform.
    # macOS: Quartz (find window id) + the built-in `screencapture` CLI.
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    # Windows/Linux: mss grabs the screen region; pywin32 locates the
    # Resolve window on Windows so the grab is cropped to it.
    "mss>=9.0; sys_platform != 'darwin'",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Local transcription. Backend is picked automatically at runtime:
#   macOS  -> mlx-whisper (Apple Neural Engine/GPU)
#   others -> faster-whisper (CTranslate2, CPU or CUDA)
transcription = [
    "mlx-whisper>=0.4.3; sys_platform == 'darwin'",
    "faster-whisper>=1.0.0; sys_platform != 'darwin'",
]

[project.scripts]
resolve-claude-mcp = "resolve_claude_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
